--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,9 @@ services:
             - "5173:5173"
         container_name: bot_assist-app
         restart: unless-stopped
-        working_dir: /var/www/
+        working_dir: /var/www/app
         volumes:
-            - ./:/var/www
+            - ./:/var/www/app
         networks:
             - bot_assist
 
@@ -44,7 +44,7 @@ services:
         ports:
             - 8000:80
         volumes:
-            - ./:/var/www
+            - ./:/var/www/app
             - ./docker-compose/nginx:/etc/nginx/conf.d
         networks:
             - bot_assist
