--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "backpack/crud": "^6.6",
         "backpack/theme-tabler": "^1.2",
         "guzzlehttp/guzzle": "^7.2",
+        "irazasyed/telegram-bot-sdk": "^3.14",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8"
