--- a/docker-compose/nginx/bot_assist.conf
+++ b/docker-compose/nginx/bot_assist.conf
@@ -4,6 +4,7 @@ server {
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/app/public;
+
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -13,8 +14,18 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
         gzip_static on;
+    }
+
+    # Proxy requests to Vite server
+    location /build/ {
+        proxy_pass http://bot_assist:5173/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
