--- a/docker-compose/nginx/bot_assist.conf
+++ b/docker-compose/nginx/bot_assist.conf
@@ -1,5 +1,8 @@
 server {
     listen 80;
+
+    server_name dev.nambapp.ru;
+
     index index.php index.html;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
