--- a/.env.local
+++ b/.env.local
@@ -1,19 +1,19 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Gbli5C2LtTN4TiJksKm7xzhSveIqDzmEOVXysxXPOvY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=bot_assist-db
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=bot_assist
+DB_USERNAME=bot_admin
+DB_PASSWORD=12341234
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -46,9 +46,9 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
-PUSHER_HOST=
-PUSHER_PORT=443
-PUSHER_SCHEME=https
+PUSHER_HOST=localhost
+PUSHER_PORT=80
+PUSHER_SCHEME=http
 PUSHER_APP_CLUSTER=mt1
 
 VITE_APP_NAME="${APP_NAME}"
@@ -57,3 +57,5 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+VITE_ASSET_HOST=localhost
+VITE_APP_ENV=local
