--- a/.env.development
+++ b/.env.development
@@ -57,5 +57,5 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-VITE_ASSET_HOST=217.171.146.215
+VITE_ASSET_HOST=dev.nambapp.ru
 VITE_APP_ENV=${APP_ENV?}
