--- a/docker-compose/nginx/bot_assist.conf
+++ b/docker-compose/nginx/bot_assist.conf
@@ -1,12 +1,18 @@
 server {
     listen 80;
+    listen 443 ssl http2;
 
-    server_name dev.nambapp.ru;
+    server_name *.nambapp.ru nambapp.ru;
 
     index index.php index.html;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/app/public;
+
+    #  SSL
+    ssl_certificate /etc/letsencrypt/live/nambapp.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/nambapp.ru/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/nambapp.ru/chain.pem;
 
     location ~ \.php$ {
         try_files $uri =404;
