--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=development
 APP_KEY=base64:HLY/7XURGKaa6r9Bn50pr1JQSnW45gg7wsSrdePPEuw=
 APP_DEBUG=true
-APP_URL=http://dev.nambapp.ru
+APP_URL=https://dev.nambapp.ru
 
 LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
