Настройки nginx для разных окружений

--- a/.env.development
+++ b/.env.development
@@ -59,3 +59,5 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 VITE_ASSET_HOST=dev.nambapp.ru
 VITE_APP_ENV=${APP_ENV?}
+VITE_CERT_PATH=/etc/letsencrypt/live/nambapp.ru/fullchain.pem
+VITE_KEY_PATH=/etc/letsencrypt/live/nambapp.ru/privkey.pem
