vite для разных окружений

--- a/.env.development
+++ b/.env.development
@@ -15,6 +15,11 @@ DB_DATABASE=bot_assist
 DB_USERNAME=bot_admin
 DB_PASSWORD=bot_admin_password
 
+MYSQL_DATABASE=${DB_DATABASE}
+MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+MYSQL_PASSWORD=${DB_PASSWORD}
+MYSQL_USER=${DB_USERNAME}
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
