--- a/docker-compose/nginx/bot_assist.development.conf
+++ b/docker-compose/nginx/bot_assist.development.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     listen 443 ssl http2;
+    listen 5173 ssl http2;
 
     server_name *.nambapp.ru nambapp.ru;
 
@@ -27,14 +28,5 @@ server {
     location / {
         try_files $uri $uri/ /index.php?$query_string;
         gzip_static on;
-    }
-
-    # Proxy requests to Vite server
-    location /build/ {
-        proxy_pass http://bot_assist:5173/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
