--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=development
 APP_KEY=base64:HLY/7XURGKaa6r9Bn50pr1JQSnW45gg7wsSrdePPEuw=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=https://dev.nambapp.ru
 
 LOG_CHANNEL=daily
