Интеграция с дадатой и улучшения карты

--- a/.env.development
+++ b/.env.development
@@ -66,3 +66,7 @@ VITE_ASSET_HOST=dev.nambapp.ru
 VITE_APP_ENV=${APP_ENV?}
 VITE_CERT_PATH=/etc/letsencrypt/live/nambapp.ru/fullchain.pem
 VITE_KEY_PATH=/etc/letsencrypt/live/nambapp.ru/privkey.pem
+
+DADATA_TOKEN=0bc81389fad160d3179b6ab6a933b0766abc46fa
+DADATA_SECRET=c3bc206884a58e0bb00770cde8c6a59e5fe3b669
+DADATA_TIMEOUT=5
