--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "irazasyed/telegram-bot-sdk": "^3.14",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "movemoveapp/laravel-dadata": "^1.0"
     },
     "require-dev": {
         "backpack/generators": "^4.0",
