--- a/.env.local
+++ b/.env.local
@@ -64,3 +64,7 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 VITE_ASSET_HOST=localhost
 VITE_APP_ENV=local
+
+DADATA_TOKEN=0bc81389fad160d3179b6ab6a933b0766abc46fa
+DADATA_SECRET=c3bc206884a58e0bb00770cde8c6a59e5fe3b669
+DADATA_TIMEOUT=5
