--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,14 @@
     "require-dev": {
         "backpack/generators": "^4.0",
         "fakerphp/faker": "^1.9.1",
+        "larastan/larastan": "*",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.0",
+        "tightenco/duster": "*"
     },
     "autoload": {
         "psr-4": {
@@ -64,6 +66,7 @@
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
+        "process-timeout": 0,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
