--- a/utils/linter/configs/phpstan.neon
+++ b/utils/linter/configs/phpstan.neon
@@ -1,5 +1,9 @@
 parameters:
     paths:
         - ./app/
+        - ./config/
+        - ./database/
+        - ./lang/
+        - ./routes/
 
     level: 5
